exo-k8s-02/07-peppermint-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peppermint
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peppermint
  template:
    metadata:
      labels:
        app: peppermint
    spec:
      containers:
        - name: peppermint
          image: pepperlabs/peppermint:latest
          ports:
            - containerPort: 3000
            - containerPort: 5003
