exo-k8s-02/08-peppermint-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: peppermint
spec:
  selector:
    app: peppermint
  ports:
    - name: web
      port: 3000
      targetPort: 3000
